crates/roughly/tests/snapshots/test_format__function_definition-3.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            (\\(a, b) a *  b)(2, 3)\n        \"# })"
---
(\(a, b) a * b)(2, 3)
