crates/roughly/tests/snapshots/test_format__function_definition-4.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{ r#\"\n            function(\n                a , b=  \"foo\") {}\n        \"# })"
---
function(
  a,
  b = "foo"
) {}
