crates/roughly/tests/snapshots/test_format__function_definition-7.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        function (a,\n        b) baz\n\n        function (a,\n        b) {baz}\n    \"#}).unwrap()"
---
function(
  a,
  b
) {
  baz
}

function(
  a,
  b
) {
  baz
}
