crates/roughly/tests/snapshots/test_format__function_definition-8.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        function() call(a = 1, b = 1)\n\n        function()\n            call(a = 1, b = 1)\n\n        function() call(\n            a = 1,\n            b = 1\n        )\n\n        function()\n        call(\n            a = 1,\n            b = 1\n        )\n\n        function() { call(a = 1, b = 1) }\n\n        function() { call(a = 1, b = 1)\n        }\n\n        function() {\n        call(a = 1, b = 1) }\n\n        function() {\n            call(a = 1, b = 1)\n        }\n\n        function()\n            { call(a = 1, b = 1) }\n    \"#}).unwrap()"
---
function() call(a = 1, b = 1)

function() {
  call(a = 1, b = 1)
}

function() call(
  a = 1,
  b = 1
)

function() {
  call(
    a = 1,
    b = 1
  )
}

function() { call(a = 1, b = 1) }

function() {
  call(a = 1, b = 1)
}

function() {
  call(a = 1, b = 1)
}

function() {
  call(a = 1, b = 1)
}

function() {
  call(a = 1, b = 1)
}
