crates/roughly/tests/snapshots/test_format__function_definition.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            function(a, b= \"foo\") {}\n        \"# })"
---
function(a, b = "foo") {}
