crates/roughly/tests/snapshots/test_format__if_statement-2.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        if (any(\n        sapply(foo)\n        )) stop(\"\")\n        if ( !foo ||\n        !bar ||\n            !baz()\n        ) stop(\"\")\n    \"#}).unwrap()"
---
if (any(
  sapply(foo)
)) {
  stop("")
}
if (!foo ||
  !bar ||
  !baz()) {
  stop("")
}
