crates/roughly/tests/snapshots/test_format__if_statement-8.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        if (condition) {}\n\n        if (condition\n        ) {}\n\n        if (\n        condition) {}\n\n        if (\n        condition\n        ) {}\n    \"#}).unwrap()"
---
if (condition) {}

if (condition) {}

if (
  condition
) {}

if (
  condition
) {}
