crates/roughly/tests/snapshots/test_format__if_statement-9.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        if ( # comment\n        condition) {}\n\n        if ( condition # comment\n        ) {}\n    \"#}).unwrap()"
---
if ( # comment
  condition
) {}

if (
  condition # comment
) {}
