crates/roughly/tests/snapshots/test_format__if_statement_comments-2.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        if (\n        # 1\n        {\n            condition\n        }) {}\n\n        if ({\n            condition\n        }\n        # 1\n        ) {}\n        \"#\n}).unwrap()"
---
if (
  # 1
  {
    condition
  }
) {}

if (
  {
    condition
  }
  # 1
) {}
