crates/roughly/tests/snapshots/test_format__if_statement_comments-3.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{ r#\"\n        if (condition) # 1\n            body\n        \"# }).unwrap()"
---
if (condition) # 1
{
  body
}
