crates/roughly/tests/snapshots/test_format__parenthesized_expression-2.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        ({})\n\n        ({\n        })\n\n        ({ body }\n        )\n\n        (\n        { body })\n\n        (\n        { body }\n        )\n\n        ({\n            body\n        })\n\n        ({\n            body\n        }\n        )\n\n        (\n        {\n            body\n        })\n\n        (\n            {\n                body\n            }\n        )\n    \"#}).unwrap()"
---
({})

({})

({ body })

(
  { body }
)

(
  { body }
)

({
  body
})

({
  body
})

(
  {
    body
  }
)

(
  {
    body
  }
)
