crates/roughly/tests/snapshots/test_format__parenthesized_expression-4.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        (lhs + rhs)\n\n        (lhs + rhs\n        )\n\n        (\n        lhs + rhs)\n\n        (\n        lhs + rhs\n        )\n\n        (lhs + rhs # comment\n        )\n\n        (\n        lhs +\n            rhs)\n\n        (lhs +\n            rhs\n        )\n\n        (lhs +\n            rhs)\n    \"#}).unwrap()"
---
(lhs + rhs)

(lhs + rhs)

(
  lhs + rhs
)

(
  lhs + rhs
)

(
  lhs + rhs # comment
)

(
  lhs +
    rhs
)

(lhs +
  rhs)

(lhs +
  rhs)
